Made a very large change regarding inheritence and more

--- a/Basics_Java/bin/.gitignore
+++ b/Basics_Java/bin/.gitignore
@@ -1,8 +1,4 @@
-/ClassesAndObjects/
-/java_basics/
-/Variables/
-/classe_and_objects/
-/variables/
-/methods/
-/constructor/
-/operators/
+/package1/
+/package2/
+/inheritance/
+/polymorphism/
