--- a/Basics_Java/.classpath
+++ b/Basics_Java/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="inheritance"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
