--- a/RestAPI/pom.xml
+++ b/RestAPI/pom.xml
@@ -88,6 +88,12 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+			<dependency>
+			    <groupId>javax.xml.bind</groupId>
+			    <artifactId>jaxb-api</artifactId>
+			    <version>2.1</version>
+			</dependency> 
         </dependencies>
     </dependencyManagement>
 
@@ -199,6 +205,10 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+        	<groupId>javax.xml.bind</groupId>
+        	<artifactId>jaxb-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
